<resources>
    <string name="app_name">WeChat</string>
    <string name="welcome_back">Bienvenido a WeChat!</string>
    <string name="login_to_continue">Iniciar sesión para continuar</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="create_new_account">Crear una nueva cuenta</string>
    <string name="add_imagen">Añadir imagen</string>
    <string name="name">Nombre</string>
    <string name="password2">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="sign_up">Registrarse</string>
    <string name="select_user">Seleccionar usuario</string>
    <string name="type_a_message">Escribe un mensaje</string>
    <string name="online">Online</string>
    <string name="en_linea">En linea</string>
    <string name="acerca">Acerca de</string>
    <string name="desarrolladores">Desarrolladores</string>
</resources>